# predict-rlm

./: .gitignore  CLAUDE.md  Makefile  README.md  demo.py  presentation.py  pyproject.toml
SpreadsheetBench/: CLAUDE.md  (+4 more)
examples/spreadbench/: Makefile  README.md  THIRD_PARTY_NOTICES.md  blog_post.md  optimize_details.md  pyproject.toml  writeup.md
examples/spreadbench/data/: .gitignore
examples/spreadbench/run_artifacts/: README.md
examples/spreadbench/runs/: .gitignore  eval_20260413_141857.json  eval_20260413_151349.json  eval_20260414_072012.json  eval_20260414_075046.json  eval_20260414_082428.json  eval_20260414_100724.json  eval_20260414_104504.json
examples/spreadbench/runs/optimize_20260413_234031/: all_candidates.json  best_signature_docstring.txt  best_skill_instructions.txt  costs_live.json  optimization_summary.json  split.json
examples/spreadbench/runs/optimize_20260413_234031/proposer_traces/: proposer_0001_signature_docstring.json  proposer_0002_skill_instructions.json  proposer_0003_signature_docstring.json  proposer_0004_skill_instructions.json  proposer_0005_signature_docstring.json  proposer_0006_skill_instructions.json  proposer_0007_signature_docstring.json  proposer_0008_skill_instructions.json  proposer_0009_signature_docstring.json  proposer_0010_skill_instructions.json  proposer_0011_skill_instructions.json  proposer_0012_skill_instructions.json  proposer_0013_signature_docstring.json  proposer_0014_signature_docstring.json  (+8 more)
examples/spreadbench/scripts/: cost_summary.py  eval.py  optimize.py  plot_optimize.py  prepare_dataset.py
examples/spreadbench/scripts/lib/: __init__.py  dataset.py  evaluation.py  lm_config.py  merge_selection.py  optimize.py  optimize_gen.py  rlm_merge_proposer.py  scoring.py
examples/spreadbench/spreadsheet_rlm/: __init__.py  recalculate.py  render.py  service.py  signature.py  skills.py
examples/spreadbench/spreadsheet_rlm/agent/: service.py  skills.py
examples/spreadbench/spreadsheet_rlm/bench/: __init__.py  cli.py  config.py  evaluation.py  prepare_dataset.py
examples/spreadbench/spreadsheet_rlm/gepa/: __init__.py  cli.py  config.py  project.py
examples/spreadbench/spreadsheet_rlm/tools/: __init__.py  recalculate.py  render.py
examples/spreadbench/tests/: test_incremental_task_traces.py  test_launch_history.py  test_proposer_error_trace.py  test_recalculate.py  test_recalculate_hang.py  test_reflection_lm_text.py  test_reflective_dataset_rendering.py  test_render.py  test_rlm_merge_proposer.py
examples/spreadbench/tests/fixtures/: hang_huge_range_34365.xlsx
(+149 files in other folders)
