[project]
name = "predict-rlm"
version = "0.2.0"
description = "Production-grade RLMs (Recursive Language Models) with tool use, built on DSPy"
authors = [{ name = "Trampoline AI" }]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"
keywords = ["rlm", "reasoning", "language-models", "dspy", "ai", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dspy>=3.1.2",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.8.2,<3",
]

[project.urls]
Homepage = "https://www.trampoline.ai/"
Repository = "https://github.com/Trampoline-AI/predict-rlm"
Issues = "https://github.com/Trampoline-AI/predict-rlm/issues"

[project.optional-dependencies]
examples = ["pymupdf>=1.24.0"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "pytest>=8.3.1,<9",
    "pytest-asyncio>=0.23.8,<0.24",
    "pytest-cov>=7.1.0",
    "pytest-testdox>=3.1.0,<4",
    "ruff>=0.11.5",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -rP --testdox"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (require WASM sandbox)"]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N"]
lint.ignore = ["E501"]
line-length = 96

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806"]

[tool.hatch.build.targets.sdist]
include = ["src/predict_rlm"]

[tool.hatch.build.targets.wheel]
include = ["src/predict_rlm"]

[tool.hatch.build.targets.wheel.sources]
"src/predict_rlm" = "predict_rlm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
