[project]
name = "spreadbench-rlm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "predict-rlm[examples,gepa,gepa-viz]",
]

[project.scripts]
rlm-gepa = "spreadsheet_rlm.gepa:main"

[tool.uv.sources]
predict-rlm = { path = "../..", editable = true }

# Records the predict-rlm API/layout version this RLM project targets.
[tool.predict-rlm.generated]
predict_rlm_version = "0.3.0"
skill_version = "2.0"
layout = "agent-tools-bench-gepa"
features = ["agent", "tools", "bench", "rlm-gepa"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spreadsheet_rlm"]
